Fixing `x` axis overflow

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -14,6 +14,8 @@ html {
 body {
   font-family: "Montserrat", sans-serif;
   text-align: center;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .carousel {
